add github link to preamble

--- a/invoice_template.tex
+++ b/invoice_template.tex
@@ -2,7 +2,7 @@
 % By Amy Fare | amyfare.ca
 % Source: amyfare.ca/files/simple_invoice_template.tex
 % with improvements by gobborg<3
-% gobborg's github repo: 
+% gobborg's github repo: https://github.com/gobborg/invoicetemplate
 % License: Creative Commons Attribution (CC BY 4.0)
 % Feel free to distribute, modify, and use as you wish, but please keep this line and the 4 lines above unchanged. (-Amy Fare ... yea sorry Amy i added my info up here.)
 
